--- a/src/main.scss
+++ b/src/main.scss
@@ -1,2 +1,6 @@
-@import "./styles/variables.scss";
-@import "./styles/global.scss";
+@import "./styles/colors";
+@import "./styles/variables";
+@import "./styles/functions";
+@import "./styles/global";
+
+@import "./styles/tiles";
