--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,4 +1,5 @@
 body {
+  color:$text-color;
   height:100vh;
   width:100vw;
   margin:0;
@@ -9,10 +10,4 @@ body {
   justify-content:center;
   align-items:center;
   background-color:$bg-color;
-}
-
-img {
-  object-fit: cover;
-  height: 90vh;
-  image-rendering: pixelated;
 }
