--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -7,8 +7,8 @@ $text-color: white;
 
 $s-shape-tile-color: green;
 $z-shape-tile-color: red;
-$t-shape-tile-color: purple;
+$t-shape-tile-color: magenta;
 $l-shape-tile-color: blue;
 $line-shape-tile-color: cyan;
-$mirrored-l-shape-tile-color: pink;
+$mirrored-l-shape-tile-color: white;
 $square-shape-tile-color: yellow;
